--- a/src/client/entries/account/account.html
+++ b/src/client/entries/account/account.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Track the Habit" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <title>My account - Track the Habit</title>
     <link rel="stylesheet" href="/src/client/entries/global.css" />
     <!-- Don't remove preloaded state comment, used for SSR props sharing -->
