--- a/src/client/entries/home/home.html
+++ b/src/client/entries/home/home.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Track the Habit" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <title>Track the Habit</title>
     <link rel="stylesheet" href="/src/client/entries/global.css" />
+    <link rel="stylesheet" href="/src/client/entries/home/home.css" />
     <!-- Don't remove preloaded state comment, used for SSR props sharing -->
     <script>
       // preloaded-state
