--- a/src/client/entries/signup/signup.html
+++ b/src/client/entries/signup/signup.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <title>Sign up - Track the Habit</title>
     <link rel="stylesheet" href="/src/client/entries/global.css" />
+    <link rel="stylesheet" href="/src/client/entries/signup/signup.css" />
     <!-- Don't remove preloaded state comment, used for SSR props sharing -->
     <script>
       // preloaded-state
